; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_options.c_opt_get_error.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_options.c_opt_get_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"getsockopt failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @opt_get_error(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %6, align 4
  store i32 4, i32* %7, align 4
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @SOL_SOCKET, align 4
  %11 = load i32, i32* @SO_ERROR, align 4
  %12 = bitcast i32* %6 to i8*
  %13 = call i64 @getsockopt(i32 %9, i32 %10, i32 %11, i8* %12, i32* %7)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %2
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @lua_pushnil(i32* %16)
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @lua_pushstring(i32* %18, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32 2, i32* %3, align 4
  br label %25

20:                                               ; preds = %2
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i8* @socket_strerror(i32 %22)
  %24 = call i32 @lua_pushstring(i32* %21, i8* %23)
  store i32 1, i32* %3, align 4
  br label %25

25:                                               ; preds = %20, %15
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @getsockopt(i32, i32, i32, i8*, i32*) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i32 @lua_pushstring(i32*, i8*) #1

declare dso_local i8* @socket_strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
